--- a/basics.tex
+++ b/basics.tex
@@ -15,17 +15,19 @@ would not make sense to pass an \textbf{Interval} to a node that requires
 a \textbf{Matrix} input.
 
 \section{Data types}
+\label{section:data_types}
+Before we dive in the user interface, it is important to briefly talk about
+all the different Data types that the user will encounter while using the software.
 
 \subsection{Geometry}
-The most important data type is \textbf{Geometry}. This represents a generic geometric
+The most important data type is the \textbf{Geometry}. This represents a generic
 object, it might be a point (0D), a curve (1D), a surface (2D) or a pre-fabricated mesh.
 Most of the time we start by creating a geometry of some sort, then
-manipulate it with transform functions, and in the end plug the result
-into a Renderer node that is the one that turns our data into something
-that we visualize on screen.
+manipulate it with transform functions, and in the end plug the modified geometry
+into a Renderer node to visualize the result on screen.
 As we will see later on, parametric transformations and sampling operations
-can change the geometric dimension of a Geometry object. As an example,
-a given curve can become a surface by applying a parametric transform to it.
+can change the number of dimension of a Geometry object. As an example,
+applying a parametric transform to a given curve may turn it into a surface.
 
 \subsection{Vector}
 As the name implies, the data contained in this type is just a vector with
@@ -33,34 +35,41 @@ user-chosen $x$, $y$ and $z$ coordinates. There is however a very important
 difference between a vector and a point: a vector is \textbf{not} a Geometry and
 can \textbf{only} be used to build a translation Matrix, as a plane normal or for
 visualization purposes. This is because the vector is to be intended as a direction,
-not as a generic coordinate in the 3D space. If we write a vector
-in homogeneous coordinates, its $w$ component is \textbf{always zero}.
+not as a generic point in the 3D space. If we were to write such vector
+in homogeneous coordinates, its $w$ component is \textbf{zero}.
 
 \subsection{Matrix}
 This data contains a 4x4 matrix which should be interpreted as a transformation written in
 homogeneous coordinates. The matrix can be either parametric or a constant-valued one.
-See the nodes section of this chapter to know more about the different matrices that can
+See section \ref{section:node_editor} to know more about the different matrices that can
 be created.
 
 \subsection{Time Transform}
-This is a very specific 4x4 matrix with a parameter named $t$ as in \textit{time}.
-By writing time-dependent expressions, the user can attach some animation to 
-a rendered Geometry object. This can be useful for example to show the movement of a
+This is a very specific 4x4 matrix containing a parameter named $t$ as in \textit{time}.
+By writing time-dependent expressions, the user can attach an animation to 
+a rendered Geometry object. This can be useful to show the movement of a
 point along a curve, or to display how a transformation progressively deforms an object
 into a final shape.
 
 \subsection{Interval and Value}
-Both \textbf{Interval} and \textbf{Value} data deals with parameters: the first contains
-the parameter and its interval boundaries, while the second contains the parameter and
-a specific value in its interval, to be used in a \textbf{Sample parameter} node.
-
+Both \textbf{Interval} and \textbf{Value} data are related to parameters.
+An \textbf{Interval} defines a name for a parameter and the interval on which it lives.
+Please note that this is always to be interpreted as a \textbf{closed} interval.
+A \textbf{Value} on the other hand contains the parameter name and a specific value that
+it can assume; this information can be used in a \textbf{Sample parameter} node.
 
 \section{Notes}
 Assembling a graph does not have a 1:1 correspondency with writing procedural
-code (e.g.: classic \CC{} code). You are only describing a series of
-objects and a set of operations that manipulate those objects, not the order
-in which the computations will be executed. The order of execution will be
-decided by the software by looking at how nodes depend from each other.
-It is an error to create a loop in the graph, i.e. using the output of a
+code (e.g.: typical \CC{} code). You are only describing a series of
+objects and a set of operations that manipulate those objects, but you do not have to
+to define the order in which the computations will be executed. The order of execution
+will be decided by the software by looking at how nodes depend from each other.
+
+Another important aspect of the node programming approach is that all the operations
+start from some \textit{sources} (i.e: geometries and parameters) and \textit{flow} to the graph
+to reach a \textit{sink} (i.e: visualization). It is an error to create a loop in the graph because
+it would break this flow and there would be no clear way on how to run all the
+needed computations.
+As an example, a loop might be created by using the output of a
 transform as its own input.
 
