--- a/introduction.tex
+++ b/introduction.tex
@@ -1,4 +1,8 @@
+\maketitle
 This software has been developed to help students understand and visualize
 geometries created by manipulating points, parametric curves and parametric
 surfaces.
-
+Because of this reason it does not feature any advanced graphics capabilities
+one would expect from a modern 3D software (including shadows,
+reflections and such), but it will hopefully help you reason
+about all the non-trivial concepts of the most common parametric objects.
