--- a/user_manual.tex
+++ b/user_manual.tex
@@ -17,6 +17,8 @@
 
 \newcommand\CC[1]{C\nolinebreak[4]\hspace{-.05em}\raisebox{.2ex}{\relsize{-1}{\textbf{++}}}#1} 
 
+\title{FranzPlot's User Manual}
+
 \begin{document}
 
 \include{introduction}
